--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,18 +42,18 @@ jobs:
         run: |
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
+          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "User Authentication" -Value 1
         shell: pwsh
 
       - name: Set Runner Admin Password
         run: |
           $password = ConvertTo-SecureString -AsPlainText "${{ secrets.RUNNER_PASSWORD }}" -Force
-          Set-LocalUser -Name "runneradmin" -Password $password
+          Set-LocalUser  -Name "runneradmin" -Password $password
         shell: pwsh
 
       - name: Create Ngrok Tunnel
         run: |
-          $region = "${{ github.event.inputs.ngrok_region || 'in' }}"
+          $region = "${{ github.event.inputs.ngrok_region }}"
           Start-Process -FilePath ".\ngrok.exe" -ArgumentList "tcp 3389 --region $region" -NoNewWindow
         shell: pwsh
 
