--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           $runnerPassword = "${{ secrets.RUNNER_PASSWORD }}"
           if (-not [string]::IsNullOrEmpty($runnerPassword)) {
               $password = ConvertTo-SecureString -AsPlainText $runnerPassword -Force
-              Set-LocalUser  -Name "runneradmin" -Password $password
+              Set-LocalUser  -Name "runneradmin" -Password "$password"
           } else {
               Write-Error "RUNNER_PASSWORD secret is not set or is empty."
               exit 1
